c/src/test/resources/c/nec_bnc/invalid/ex41-3.ctrl
<controlFile>
  <sourceFile name="../ex41.c" id="1" />
  <run>
    <startPosition fileId="1" line="6" />
    <wayPoint fileId="1" line="13" >
      <loop iterTimes="3" >
        <wayPoint fileId="1" line="14" >
          <command>
            <cascadeFunction>cascade_check</cascadeFunction>
            <argument><![CDATA[
              valid(&x[i]) && valid(&z[j])
            ]]>
            </argument>
          </command>
        </wayPoint>
      </loop>
    </wayPoint>
    <endPosition fileId="1" line="22" />
  </run>
</controlFile>